Using LLM for alias generation

--- a/name_matching/config/Config.ini
+++ b/name_matching/config/Config.ini
@@ -6,3 +6,15 @@ FIRST_NAME_COL = FIRST_NM
 LAST_NAME_COL = LAST_NM
 FULL_NAME_COL = FULL_NM
 ENT_TYPE_COL = ENT_TYPE
+
+EDIT_DIST_COL = EDIT_DIST
+NAME_X_COL = NAME_X
+NAME_Y_COL = NAME_Y
+
+[DATAPATH.PROCESSED]
+FILENAME_POS_PAIRS = data/processed/name_matching_pos_pairs.csv
+FILENAME_NEG_PAIRS = data/processed/name_matching_neg_pairs.csv
+
+[DATA.VALUES]
+PERSON_TYPE = PERS
+ORGA_TYPE = ORGA
