Finished make_data pipeline

--- a/name_matching/config/Config.ini
+++ b/name_matching/config/Config.ini
@@ -1,5 +1,7 @@
 [DATAPATH.RAW]
 MOCK_SAMPLE = data/raw/mock_names.csv
+ORGA_ALIAS_PROMPT = data/orga_alias_prompt.txt
+PERS_ALIAS_PROMPT = data/pers_alias_prompt.txt
 
 [DATA.COLUMNS]
 FIRST_NAME_COL = FIRST_NM
