Making the trainer

--- a/name_matching/config/Config.ini
+++ b/name_matching/config/Config.ini
@@ -13,6 +13,17 @@ EDIT_DIST_COL = EDIT_DIST
 NAME_X_COL = NAME_X
 NAME_Y_COL = NAME_Y
 
+# Feature columns
+EDIT_DIST_COL = EDIT_DIST
+EDIT_DIST_RATIO = EDIT_DIST_RATIO
+JACCARD_SIM_COL = JACCARD_SIM
+COSINE_SIM_COL = COSINE_SIM
+RATIO_COL = RATIO
+SORTED_TOKEN_RATIO_COL = SORTED_TOKEN_RATIO
+TOKEN_SET_RATIO_COL = TOKEN_SET_RATIO
+PARTIAL_RATIO_COL = PARTIAL_RATIO
+EMB_DISTANCE_COL = EMB_DISTANCE
+
 [DATAPATH.PROCESSED]
 FILENAME_POS_PAIRS = data/processed/name_matching_pos_pairs.csv
 FILENAME_NEG_PAIRS = data/processed/name_matching_neg_pairs.csv
