--- a/name_matching/config/Config.ini
+++ b/name_matching/config/Config.ini
@@ -3,15 +3,31 @@ MOCK_SAMPLE = data/raw/mock_names.csv
 ORGA_ALIAS_PROMPT = data/orga_alias_prompt.txt
 PERS_ALIAS_PROMPT = data/pers_alias_prompt.txt
 
+[DATAPATH.PROCESSED]
+FILENAME_POS_PAIRS = data/processed/name_matching_pos_pairs.csv
+FILENAME_NEG_PAIRS = data/processed/name_matching_neg_pairs.csv
+
+[MODELPATH]
+FILENAME_TRAIN_FEATURED = models/name_matching_train_featured.csv
+FILENAME_MODEL_TFIDF_NGRAM = models/name_matching_tfidf_ngrams.pkl
+MODEL_LGB_NAME_MATCHING = models/model_lgb_name_matching.pkl
+
+[FIGUREPATH]
+FIGURE_ROC_AUC_TRAIN = reports/figures/roc_auc_training.png
+FIGURE_PRECISION_RECALL = reports/figures/precision_recall.png
+FIGURE_FEATURE_IMPORTANCE = reports/figures/feature_importance.png
+FIGURE_FEATURE_DISTRIBUTION = reports/figures/feature_distribution.png
+
 [DATA.COLUMNS]
 FIRST_NAME_COL = FIRST_NM
 LAST_NAME_COL = LAST_NM
 FULL_NAME_COL = FULL_NM
 ENT_TYPE_COL = ENT_TYPE
 
-EDIT_DIST_COL = EDIT_DIST
+DATETIME_COL = DATE_TIME
 NAME_X_COL = NAME_X
 NAME_Y_COL = NAME_Y
+LABEL_COL = LABEL
 
 # Feature columns
 EDIT_DIST_COL = EDIT_DIST
@@ -23,10 +39,6 @@ SORTED_TOKEN_RATIO_COL = SORTED_TOKEN_RATIO
 TOKEN_SET_RATIO_COL = TOKEN_SET_RATIO
 PARTIAL_RATIO_COL = PARTIAL_RATIO
 EMB_DISTANCE_COL = EMB_DISTANCE
-
-[DATAPATH.PROCESSED]
-FILENAME_POS_PAIRS = data/processed/name_matching_pos_pairs.csv
-FILENAME_NEG_PAIRS = data/processed/name_matching_neg_pairs.csv
 
 [DATA.VALUES]
 PERSON_TYPE = PERS
