Added an additional feature and fixed all the test cases

--- a/name_matching/config/Config.ini
+++ b/name_matching/config/Config.ini
@@ -17,6 +17,7 @@ FIGURE_ROC_AUC_TRAIN = reports/figures/roc_auc_training.png
 FIGURE_PRECISION_RECALL = reports/figures/precision_recall.png
 FIGURE_FEATURE_IMPORTANCE = reports/figures/feature_importance.png
 FIGURE_FEATURE_DISTRIBUTION = reports/figures/feature_distribution.png
+FIGURE_PROBABILITY_DENSITY = reports/figures/probability_density.png
 
 [DATA.COLUMNS]
 FIRST_NAME_COL = FIRST_NM
@@ -39,6 +40,7 @@ SORTED_TOKEN_RATIO_COL = SORTED_TOKEN_RATIO
 TOKEN_SET_RATIO_COL = TOKEN_SET_RATIO
 PARTIAL_RATIO_COL = PARTIAL_RATIO
 EMB_DISTANCE_COL = EMB_DISTANCE
+LEN_DIFF_COL = LEN_DIFF
 
 [DATA.VALUES]
 PERSON_TYPE = PERS
